[package]
name = "asak"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["audio", "music", "DSP", "synth", "synthesizer"]
readme = "README.md"
license-file = "LICENSE"
description = "A cross-platform audio recording/playback CLI tool with TUI"
authors = ["Qichao Lan <chaosprint@gmail.com>"]
repository = "https://github.com/chaosprint/asak.git"

[dependencies]
anyhow = "1.0.80"
chrono = "0.4.35"
clap = { version = "4.5.1", features = ["derive"] }
cpal = "0.15.2"
crossterm = "0.27.0"
hound = "3.5.1"
rand = "0.8.5"
ratatui = "0.26.1"
smallvec = "1.13.1"
