[package]
name = "asak"
version = "0.3.1"
edition = "2021"
keywords = ["audio", "music", "DSP", "synth", "synthesizer"]
readme = "README.md"
license-file = "LICENSE"
description = "A cross-platform audio recording/playback CLI tool with TUI"
authors = ["Qichao Lan <chaosprint@gmail.com>"]
repository = "https://github.com/chaosprint/asak.git"

[dependencies]
anyhow = "1.0.80"
chrono = "0.4.35"
clap = { version = "4.5.1", features = ["derive"] }
cpal = { version = "0.15.2", features = ["jack"], optional = true }
crossbeam = "0.8.4"
crossterm = "0.27.0"
dasp_interpolate = { version = "0.11.0", features = ["linear"] }
dasp_ring_buffer = "0.11.0"
dasp_signal = "0.11.0"
hound = "3.5.1"
inquire = "0.7.4"
parking_lot = "0.12.1"
rand = "0.8.5"
ratatui = "0.26.1"
smallvec = "1.13.1"

[features]
default = ["cpal"]
jack = ["cpal/jack"]
