[package]
name = "asak"
version = "0.3.4"
edition = "2021"
keywords = ["audio", "music", "DSP", "synth", "synthesizer"]
readme = "README.md"
license-file = "LICENSE"
description = "A cross-platform audio recording/playback CLI tool with TUI"
authors = ["Qichao Lan <chaosprint@gmail.com>"]
repository = "https://github.com/chaosprint/asak.git"

[dependencies]
anyhow = "1.0.80"
chrono = "0.4.35"
clap = { version = "4.5.1", features = ["derive"] }
colored = "2.1.0"
cpal = { version = "0.15.2", features = ["jack"], optional = true }
crossbeam = "0.8.4"
crossterm = "0.27.0"
dasp_interpolate = { version = "0.11.0", features = ["linear"] }
dasp_ring_buffer = "0.11.0"
dasp_signal = "0.11.0"
hound = "3.5.1"
inquire = "0.7.4"
parking_lot = "0.12.1"
rand = "0.8.5"
ratatui = "0.26.1"
smallvec = "1.13.1"

[build-dependencies]
clap = { version = "4.5.4", features = ["derive"] }
clap_complete = "4.5.2"
clap_mangen = "0.2.20"

[features]
default = ["cpal"]
jack = ["cpal/jack"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.16.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc"
]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false

[package.metadata.dist.dependencies.apt]
libasound2-dev = '*'
libjack-dev = '*'
